# tile-stitch

./: .gitignore  CMakeLists.txt
etc/cmake/: FindGEOTIFF.cmake
src/: config.h.in  stitch.c
